--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-    <div class="aaa">
+    <div class="header">
         <img src="./eisenhower-matrix.jpg">
-        <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+        <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-        <p id="top-section-for-adding-element-to-list">
+    <div class="main-section">
+        <p id="add">
             <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="creating-tasks">
             <input id="new-task" class="task" type="text">
             <button>Add</button>
         </div>
