--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="main-section">
         <p id="add">
             <label for="new-task">Add Item</label>
-        <div class="creating-tasks">
+        <div class="create-tasks">
             <input id="new-task" class="task" type="text">
             <button>Add</button>
         </div>
         </p>
         <h3>Todo</h3>
-        <ul id="incomplete-tasks">
+        <ul id="incomplete">
             <li>
                 <input type="checkbox">
                 <label class="task">Pay Bills</label>
@@ -38,7 +38,7 @@
             </li>
         </ul>
         <h3>Completed</h3>
-        <ul id="completed-tasks">
+        <ul id="completed">
             <li>
                 <input type="checkbox" checked>
                 <label class="task">See the Doctor</label>
