refactor(extended-1.1): Semantics

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <img src="./eisenhower-matrix.jpg">
         <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main-section">
-        <p id="add">
+    </header>
+    <main class="main-section">
+        <div id="add">
             <label for="new-task">Add Item</label>
-        <div class="create-tasks">
-            <input id="new-task" class="task" type="text">
-            <button>Add</button>
+            <div class="create-tasks">
+                <input id="new-task" class="task" type="text">
+                <button>Add</button>
+            </div>
         </div>
-        </p>
         <h3>Todo</h3>
         <ul id="incomplete">
             <li>
@@ -46,7 +46,7 @@
                 <button class="delete"><img src="./remove.svg"></button>
             </li>
         </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
 </body>
 
