fix(basic -2.5): HTML Line-Wrapping

--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 <head>
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link
+    rel="stylesheet"
+    href="style.css"
+    media="screen"
+    charset="utf-8">
 </head>
 
 <body>
+    <!--header-->
     <header class="header">
-        <img src="./eisenhower-matrix.jpg" alt="matrix-eisenhower">
-        <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+        <img
+        src="./eisenhower-matrix.jpg"
+        alt="matrix-eisenhower">
+        <a
+        class="more-info"
+        href="https://goal-life.com/page/method/matrix-eisenhower"
+        >Want more details?
+        </a>
     </header>
     <main class="main-section">
         <div id="add">
@@ -27,14 +38,24 @@
                 <label class="task">Pay Bills</label>
                 <input type="text" class="task">
                 <button class="edit">Edit</button>
-                <button class="delete"><img src="./remove.svg" alt="X-icon" class="delete_image"></button>
+                <button class="delete">
+                    <img
+                    src="./remove.svg"
+                    alt="X-icon"
+                    class="delete_image">
+                </button>
             </li>
             <li class="edit-mode">
-                <input type="checkbox">
-                <label class="task">Go Shopping</label>
-                <input type="text" value="Go Shopping" class="task">
+                <input type="checkbox" class="edit-mode_input">
+                <label class="task edit-mode_label">Go Shopping</label>
+                <input type="text" value="Go Shopping" class="task edit-mode_input">
                 <button class="edit">Save</button>
-                <button class="delete"><img src="./remove.svg" alt="X-icon" class="delete_image"></button>
+                <button class="delete">
+                    <img
+                    src="./remove.svg"
+                    alt="X-icon"
+                    class="delete_image">
+                </button>
             </li>
         </ul>
         <h3>Completed</h3>
@@ -43,7 +64,12 @@
                 <input type="checkbox" checked>
                 <label class="task">See the Doctor</label>
                 <input type="text" class="task"><button class="edit">Edit</button>
-                <button class="delete"><img src="./remove.svg" alt="X-icon" class="delete_image"></button>
+                <button class="delete">
+                    <img
+                    src="./remove.svg"
+                    alt="X-icon"
+                    class="delete_image">
+                </button>
             </li>
         </ul>
     </main>
