fix deleButton size

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 </button>
             </li>
             <li class="edit-mode">
-                <input type="checkbox" class="edit-mode_input">
+                <input type="checkbox">
                 <label class="task edit-mode_label">Go Shopping</label>
-                <input type="text" value="Go Shopping" class="task edit-mode_input">
+                <input type="text" value="Go Shopping" >
                 <button class="edit">Save</button>
                 <button class="delete">
                     <img
